finalizando parte admin e adicionando layouts

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,25 @@
+<div class="album py-5 bg-body-tertiary">
+    <div class="container">
 
-<h1>Bem vindo a área administrativa do mundo feliz </h1>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <% @produtos.each do |produto| %>
+        <div class="col-md-4">
+          <%= produto.nome %>
+          <div class="card mb-4 shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <div class="card-body">
+              <p class="card-text"> <%= produto.descricao %> </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Add no carrinho</button>
+                  
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <%end%>
+      </div>
+    </div>
+  </div>
